Feat/country property post implementation (#30)
* Update swagger spec

* Add new test data

* Add and rewrite jsonschema models

* Rewrite dbmodel

* Alpha

* Fix layouts

* Add delete and put endpoints

* Removed dependence on models in api

* Fix tests and methods

* Add nullable:true

* Add cors
