# backend/jqestate/modules/api/models/__init__.py
@@ -4,11 +4,11 @@
 from .api_error_response import ApiErrorResponse
 from .communication import Communication
 from .country import Country
-from .country_property import CountryProperty
-from .country_property_additional_details import CountryPropertyAdditionalDetails
-from .country_property_land_details import CountryPropertyLandDetails
-from .country_property_responsible_user import StaffUser
-from .country_property_state_details import CountryPropertyStateDetails
+from .get_country_property import GetCountryProperty
+from .get_country_property_additional_details import GetCountryPropertyAdditionalDetails
+from .get_country_property_land_details import GetCountryPropertyLandDetails
+from .get_country_property_state_details import GetCountryPropertyStateDetails
+from .post_put_country_property import PostPutCountryProperty
 from .district import District
 from .district_location import DistrictLocation
 from .image import Image
@@ -26,7 +26,8 @@ from .route import Route
 from .sale_offer import SaleOffer
 from .specification import Specification
 from .specification_layouts import SpecificationLayouts
+from .staff_user import StaffUser
 
 __all__ = ['ApiErrorResponse', 'PaginationWrapper', 'Pagination', 'Communication', 'Image',
-           'Layout', 'Location', 'CountryProperty', 'RentOffer', 'SaleOffer',
+           'Layout', 'Location', 'GetCountryProperty', 'PostPutCountryProperty', 'RentOffer', 'SaleOffer',
            'Specification', 'SpecificationLayouts']
